# watermarkapps

./: .env  .env.example  .gitignore  .readthedocs.yaml  Dockerfile  data_watermark_dump.json  db.sqlite3  docker-compose.yml  init.sql  manage.py  mkdocs.yml  nginx.conf  pyproject.toml  requirements.txt
docs/: Installasi.md  env.md  index.md  persiapan.md  requirements.txt
docs/source/: conf.py  index.rst
khazanah/: admin.py  apps.py  models.py
khazanah/migrations/: 0001_initial.py  0002_pabrik.py  0003_transaksi.py  0004_transaksi_gambar_countermark_and_more.py  0005_jeniskertas_kondisifisikkertas_motifcountermark_and_more.py  0006_transaksi_jarak_garis_transaksi_jenis_kertas_and_more.py  0007_alter_transaksi_kurun_waktu_arsip.py  0008_alter_transaksi_options_and_more.py  0009_remove_transaksi_kurun_waktu_arsip_and_more.py  0010_transaksi_kurun_waktu_arsip.py  0011_transaksi_bulan_kurun_waktu_and_more.py
templates/: detail.html  edit_transaksi.html  home.html  login.html  login2.html  search.html  searchori.html  tambah_transaksi.html  transaksi_list.html
templates/admin/: add_watermark_form.html
watermarkapp/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
