[tool.poetry]
name = "watermarkapps"
version = "0.1.0"
description = "aplikasi untuk input watermark"
authors = ["Arsip Nasional RI"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]

python = "^3.10.11"

asgiref = "3.7.2"
Django = "4.2.3"
django-appconf = "1.0.5"
django-grappelli = "3.0.6"
django-model-utils = "4.3.1"
django-monthfield = "0.1.4"
django-select2 = "8.1.2"

Pillow = "10.0.0"
sqlparse = "0.4.4"
tzdata = "2023.3"
mysqlclient = "^2.2.0"
gunicorn = "^21.2.0"
sphinx = "^7.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
